--- a/src/app/esportes/futebol/default/listagem/futebol-listagem.component.html
+++ b/src/app/esportes/futebol/default/listagem/futebol-listagem.component.html
@@ -228,7 +228,7 @@
                                 <div class="nome" [ngStyle]="{'width.px': nomesJogoWidth}">
                                     <div class="escudo-container">
                                         <span *ngIf="jogo.time_a_img; else defaulImage" class="escudo">
-                                            <img src="https://cdn.wee.bet/img/times/v2/{{jogo.time_a_img}}.png" size="s"
+                                            <img src="https://cdn.wee.bet/img/times/m/{{jogo.time_a_img}}.png" size="s"
                                                  class="escudo-img">
                                         </span>
                                         <ng-template #defaulImage>
@@ -243,7 +243,7 @@
                                     </div>
                                     <div class="escudo-container">
                                         <span *ngIf="jogo.time_b_img; else defaulImageB" class="escudo">
-                                            <img src="https://cdn.wee.bet/img/times/v2/{{jogo.time_b_img}}.png" size="s"
+                                            <img src="https://cdn.wee.bet/img/times/m/{{jogo.time_b_img}}.png" size="s"
                                                  class="escudo-img">
                                         </span>
                                         <ng-template #defaulImageB>
