--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -41,7 +41,7 @@
         <ng-container *ngTemplateOutlet="menuTemplate"></ng-container>
     </nav>
     <div class="side side-right">
-        <div class="support-btn" *ngIf="isMobile && (whatsapp || isDemo) && (!isLoggedIn || isCliente)">
+        <div class="support-btn" *ngIf="isMobile && (whatsapp || isDemo)">
             <a *ngIf="isDemo" target="_blank" href="https://materiais.wee.bet/demo-weebet">
                 <i class="fa-solid fa-headset"></i>
             </a>
