--- a/src/app/shared/layout/modals/login-modal/login-modal.component.html
+++ b/src/app/shared/layout/modals/login-modal/login-modal.component.html
@@ -16,9 +16,9 @@
                 <div class="input-md">
                     <input type="text" id="username" class="form-control inverted-out" formControlName="username" placeholder=" "
                         [ngClass]="applyCssInputError('username')">
-                    <label for="username">{{'geral.EmailOuUsuario' | translate}}</label>
+                    <label for="username">{{'geral.email' | translate}}</label>
                 </div>
-                <app-error-msg [control]="form.get('username')" label="{{'geral.EmailOuUsuario' | translate}}" class="text-left"></app-error-msg>
+                <app-error-msg [control]="form.get('username')" label="{{'geral.email' | translate}}" class="text-left"></app-error-msg>
             </div>
             <div class="form-group" [ngClass]="applyCssDivError('password')">
                 <div class="input-md">
