correções no de fornecedores e ocultando filtro na aba virtuais

--- a/src/app/casino/wall/wall.component.html
+++ b/src/app/casino/wall/wall.component.html
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <div class="filter" *ngIf="!showLoadingIndicator">
+    <div class="filter" *ngIf="!showLoadingIndicator && gameType != 'virtuais'">
         <div class="search-box" >
             <i class="fa fa-search"></i>
             <input id="limparCampoSearch" type="text"
