--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -622,8 +622,8 @@
                 <span>{{'menu.virtuais' | translate}}</span>
             </a>
         </div>
-        <div class="category" *ngIf="parlaybayAtivo">
-            <a [routerLink]="['/casino/pb/play/real/170000/parlaybay']" routerLinkActive="active">
+        <div style="cursor: pointer" class="category" *ngIf="parlaybayAtivo">
+            <a (click)="iniciarParlaybay()" routerLinkActive="active">
                 <span>PARLAYBAY</span>
             </a>
         </div>
