atualizando branch e finalizando pagina de promoções

--- a/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.html
+++ b/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.html
@@ -1,4 +1,4 @@
-<div id="default-content">
+<div id="default-content" style="height: -webkit-fill-available;">
     <div class="wrap-stick">
         <app-spinner *ngIf="showLoadingIndicator"></app-spinner>
         <div *ngIf="!showLoadingIndicator">
