--- a/src/app/clientes/indique-ganhe/indique-ganhe.component.html
+++ b/src/app/clientes/indique-ganhe/indique-ganhe.component.html
@@ -217,7 +217,7 @@
     </div>
     <div class="modal-body" style="min-height: 80%">
         <p>
-            Indique seus amigos e ganhe R${{valorGanhoPorIndicacao}} em saldo real!!<br>
+            Indique seus amigos e ganhe R${{valorGanhoPorIndicacao}} em saldo {{tipoSaldoGanho}}!!<br>
             Ficou interessado? Então veja abaixo todas as regras e condições
         </p>
         <ul style="padding-left: 1.5rem;">
@@ -232,8 +232,8 @@
             </li>
             <li>
                 <b>Bônus para o Indicador:</b> A cada usuário que você indicar, que se registre e faça um depósito de no mínimo R${{valorMinDepositado}} e realizar apostas
-                de no mínimo R${{valorMinApostado}} em um prazo de {{qtdDiasRequisitos}} dias, você ganhará R${{valorGanhoPorIndicacao}} em saldo real (sacável). Este saldo será automaticamente
-                adicionado à sua conta em até 24 horas após o INDICADO cumprir as regras da promoção.
+                de no mínimo R${{valorMinApostado}} em um prazo de {{qtdDiasRequisitos}} dias, você ganhará R${{valorGanhoPorIndicacao}} em saldo {{tipoSaldoGanho == 'real' ? 'real (sacável)' : 'bônus (' + modalidadePromocao + ')' }}. Este saldo será 
+                liberado para resgate na aba minhas indicações em até 24 horas após o INDICADO cumprir as regras da promoção, você terá um prazo de {{prazoResgateSaldo}} dias para resgatar.
             </li>
             <li>
                 <b>Depósito do Indicado:</b> O usuário indicado deve realizar um depósito de no mínimo R${{valorMinDepositado}} na sua conta e fazer
@@ -254,7 +254,7 @@
 
 <ng-template #minhasIndicacoesModal style="min-height: 80%">
     <div class="modal-header" [ngStyle]="{'border': 'none', 'padding': '15px 10px'}">
-        <a (click)="activeReferralsModal.dismiss('Cross click')" class="botao-esquerdo">
+        <a (click)="activeReferralsModal.dismiss('Cross click')" class="botao-esquerdo" ngbAutofocus>
             <i class="fa fa-arrow-left" [ngStyle]="{'color': 'var(--highlight)'}"></i>
         </a>
         <div class="titulo">{{'indique_ganhe.minhasIndicacoes' | translate}}</div>
@@ -265,7 +265,7 @@
             <h2 [ngStyle]="{'font-size': '32px', 'font-weight': '600', 'text-align': 'center'}">{{ indicadoSelecionado.valor_comissao | currency }}</h2>
             <h2 [ngStyle]="{'font-size': '14px', 'text-align': 'center'}">{{ 'geral.saldo' | translate }} {{ translateStatus(indicadoSelecionado.status) | lowercase }}</h2>
         </div>
-        <div class="vertical-progress-container">
+        <div class="vertical-progress-container" [ngStyle]="{'margin-bottom': '50px'}">
             <ul class="vertical-progress">
                 <li
                     class="vertical-progress-item"
@@ -323,6 +323,15 @@
                     </p>
                 </li>
             </ul>
+        </div>
+        <div [ngStyle]="{'position': 'absolute', 'left': '0', 'bottom': '12px', 'width': '100%', 'display': 'flex', 'justify-content': 'center'}">
+            <button 
+                class="btn btn-custom" 
+                type="button"
+                [ngStyle]="{'width': '95%'}" 
+                [disabled]="indicadoSelecionado.status != 'resgate'"
+                (click)="indicadoSelecionado.status == 'resgate' ? redeemCommission(indicadoSelecionado.comissao_id) : false"
+                >{{'indique_ganhe.resgatar' | translate}}</button>
         </div>
     </div>
 </ng-template>
