ajuste no texto do modal de regras de bônus

--- a/src/app/shared/layout/modals/regras-bonus-modal/regras-bonus-modal.component.html
+++ b/src/app/shared/layout/modals/regras-bonus-modal/regras-bonus-modal.component.html
@@ -54,7 +54,7 @@
                     <li>
                         <span  *ngIf="promocao.tipoConversao === 'porcentagem'; else defaultTipoConversao">
                             O valor máximo de saldo bônus a ser convertido para saldo real é {{promocao.maximoBonusConvertido | number: '1.0-0'}}% 
-                            do valor do primeiro bônus, todo o valor restante será descartado.
+                            do valor do bônus recebido, todo o valor restante será descartado.
                         </span>
                         <ng-template #defaultTipoConversao>
                             O valor máximo de saldo bônus a ser convertido para saldo real é R${{promocao.maximoBonusConvertido}}, 
