--- a/src/app/shared/layout/modals/cliente-pix-modal/cliente-pix-modal.component.html
+++ b/src/app/shared/layout/modals/cliente-pix-modal/cliente-pix-modal.component.html
@@ -15,6 +15,9 @@
                                class="form-control inverted-out">
                         <label>{{'geral.chavePix' | translate}}</label>
                         <app-error-msg [control]="form.get('chave_pix')"></app-error-msg>
+                        <small>{{'saques.alertaTitularChave' | translate}}</small>
+                        <br>
+                        <small *ngIf="metodoPagamento == 'pagfast'">{{'saques.alertaChaveCelular' | translate}}</small>
                     </div>
                     <div class="form-group input-md">
                         <input [type]="mostrarSenha ? 'text' : 'password'" placeholder=" " formControlName="senha_atual"
