--- a/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.html
+++ b/src/app/promocoes/list-promocao/promocao-form/promocao-form.component.html
@@ -1,4 +1,4 @@
-<div id="default-content" style="height: -webkit-fill-available;">
+<div id="default-content" [ngStyle]="{'height': currentHeight + 'px'}">
     <div class="wrap-stick">
         <app-spinner *ngIf="showLoadingIndicator"></app-spinner>
         <div *ngIf="!showLoadingIndicator">
@@ -9,7 +9,7 @@
                 <h2>{{ promocao.promocaoNome }}</h2>
             </div>
 
-            <div class="content-body" #content id="print-section">
+            <div class="content-body" style="height: -webkit-fill-available; min-height: 35vh" #content id="print-section">
                 <div class="content" [innerHTML]="promocao.conteudo | safeHTML">
                 </div>
             </div>
