--- a/src/app/promocoes/promocao.component.html
+++ b/src/app/promocoes/promocao.component.html
@@ -11,7 +11,7 @@
 <div id="promocoes-listagem" *ngIf="!isLoading" [ngStyle]="{'height': currentHeight + 'px'}">
     <div class="info-promotions">
         <h4><b>{{'menu.promocao' | translate}}</b></h4>
-        <p>Aqui você encontrará todas as promoções ativas no momento em nossa plataforma</p>
+        <p style="margin-bottom: 0px;">Aqui você encontrará todas as promoções ativas no momento em nossa plataforma</p>
     </div>
     <div class="cards-container">
         <ng-container *ngFor="let promocao of promocoes">
